[package]
name = "oaf"
version = "0.1.1"
authors = ["Grayson Burton <ocornoc@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = """
An extremely basic linear system satisfiability checker

It is not made for general use.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "^0.21"
approx = "^0.3"
