[package]
name = "oaf"
version = "0.1.1"
authors = ["Grayson Burton <ocornoc@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = """
A satisfiability checker for universe polymorphism in Qualm.

Based on "SMT Solving for the Theory of Ordering Constraints" by
Cunjing Ge, Feifei Ma, Jeff Huang, and Jian Zhang.
"""

[dependencies]
nalgebra = "^0.21"
approx = "^0.3"
