[package]
name = "oaf"
version = "0.2.0"
authors = ["Grayson Burton <ocornoc@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = """
A satisfiability checker for universe polymorphism in Qualm.

Based on "SMT Solving for the Theory of Ordering Constraints" by
Cunjing Ge, Feifei Ma, Jeff Huang, and Jian Zhang.
"""

[dependencies]
petgraph = "^0.5"
